--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
   justify-content: flex-start;
   align-items: flex-start;
   padding: 10px 20px;
-  width: 100%;
+  width: 1300px;
   height: 700px;
 }
 ul {
