--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,13 +20,13 @@ h1 {
   font-size: 28px;
   letter-spacing: 1px;
 }
-.input {
+.inputDiv {
   display: flex;
   align-items: center;
   width: 100%;
   height: 50px;
 }
-.input input {
+#inputText {
   width: 50%;
   height: 30px;
   background-color: #f1f1f1;
@@ -35,20 +35,20 @@ h1 {
   font-size: 16px;
   font-family: 'Akshar', sans-serif;
 }
-#addTaskBtn {
+#btnAddTask {
   width: 90px;
   height: 36px;
   font-family: 'Akshar', sans-serif;
   font-size: 15px;
   cursor: pointer;
 }
-#tasksList {
+#ulTasksList {
   display: flex;
   flex-direction: column;
   gap: 15px;
   width: 100%;
 }
-#tasksList li {
+#ulTasksList li {
   display: flex;
   align-items: center;
   width: 50%;
@@ -56,18 +56,39 @@ h1 {
   background-color: #f1f1f1;
   border-radius: 5px;
 }
-.transitionCheckbox {
+.checkboxTasksList {
   width: 15px;
   height: 15px;
   margin-right: 10px;
   transition: transform 0.5s;
 }
-#tasksList li p {
+#ulTasksList li p {
   font-size: 16px;
 }
-.transitionCheckbox:checked ~ p{
+#ulTasksList li img {
+  width: 20px;
+  height: 20px;
+  margin: 0 10px 0 auto;
+  cursor: pointer;
+}
+.checkboxTasksList:checked ~ p{
   text-decoration:line-through;
 }
-.transitionCheckbox:checked {
+.checkboxTasksList:checked {
   transform: rotateX(360deg);
+}
+.completedTasks {
+  width: 100%;
+  display: none;
+}
+.completedTasks div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 30px;
+  font-size: 20px;
+  background-color: #f1f1f1;
+  opacity: 0.5;
+  border-radius: 3px;
 }
